All the updates

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="common/css/fontawesome-all.min.css" />
 		<link rel="stylesheet" type="text/css" href="common/css/main.css" />
+
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 	</head>
 
 	<body id="homepage">
@@ -26,7 +31,7 @@
 		<script>
 			var request = new XMLHttpRequest();
 			request.overrideMimeType("application/json");
-			request.open("GET", 'config.json');
+			request.open("GET", 'config/config.json');
 			request.onload = function () {
 				if (request.status >= 200 && request.status < 400) {
 					var config = JSON.parse(this.response);
